--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ openstack.tripleoclient.v1 =
     baremetal_introspection_bulk_status = tripleoclient.v1.baremetal:StatusBaremetalIntrospectionBulk
     baremetal_configure_ready_state = tripleoclient.v1.baremetal:ConfigureReadyState
     baremetal_configure_boot = tripleoclient.v1.baremetal:ConfigureBaremetalBoot
+    diskimage_build = tripleoclient.v1.diskimage:BuildImage
     overcloud_netenv_validate = tripleoclient.v1.overcloud_netenv_validate:ValidateOvercloudNetenv
     overcloud_deploy = tripleoclient.v1.overcloud_deploy:DeployOvercloud
     overcloud_image_build = tripleoclient.v1.overcloud_image:BuildOvercloudImage
