Get me a swift client
Change-Id: I2a45f70949f87038c009141df06adee2a169f598

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ openstack.cli.extension =
     tripleoclient = tripleoclient.plugin
 
 openstack.tripleoclient.v1 =
+    swift_client = tripleoclient.v1.swift:SwiftClient
     baremetal_instackenv_validate = tripleoclient.v1.baremetal:ValidateInstackEnv
     baremetal_import = tripleoclient.v1.baremetal:ImportBaremetal
     baremetal_introspection_bulk_start = tripleoclient.v1.baremetal:StartBaremetalIntrospectionBulk
